手动添加_WINDOWS宏

--- a/ORB-SLAM2/ORB-SLAM2.vcxproj
+++ b/ORB-SLAM2/ORB-SLAM2.vcxproj
@@ -94,7 +94,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>./include;../3rd/DBoW2/include;../3rd/Eigen3/include;../3rd/g2o/include;../3rd/OpenCV3_1/include;../3rd/Pangolin/include;../3rd/Pangolin/lib/external/glew/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -108,7 +108,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINDOWS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>./include;../3rd/DBoW2/include;../3rd/Eigen3/include;../3rd/g2o/include;../3rd/OpenCV3_1/include;../3rd/Pangolin/include;../3rd/Pangolin/lib/external/glew/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
